Ready code for debugging runs

--- a/params/gillespie_REM.yaml
+++ b/params/gillespie_REM.yaml
@@ -9,17 +9,17 @@ no_cycle:
   dynamics: 'gillespie'
 
   # log10(nMC) total number of timesteps, or max time
-  log10nMC: -1
+  log10nMC: 10
 
   # Energy landscape
   landscape: 'rem'
 
   # Number of serial computations on a single CPU
-  n_serial_runs: 100
+  n_serial_runs: 250
 
   # Number of cpu's to use such that the total number of simulations is
   # n_serial_runs * n_cpus
-  n_cpu: 1
+  n_cpu: 6
 
 
 cycle:
@@ -28,5 +28,5 @@ cycle:
   n_spins: [18, 20, 22]
 
   # Inverse temperature; note that beta_critical = 1.0 is hard-coded for now
-  beta: [1.33]  # [4.0, 2.0, 1.66, 1.33]
+  beta: [1.33, 2.0, 4.0]  # [4.0, 2.0, 1.66, 1.33]
   # ---------------------------------------------------------------------------
