--- a/slurm_configs/template.yaml
+++ b/slurm_configs/template.yaml
@@ -1,6 +1,8 @@
 partition: New
 time: null
 account: null
-n_tasks: 4
-n_cpus_per_task: 2
+constraint: null
+n_cpu_per_job: 2
+total_cpu: 96
 module: compilers/gcc-10.1.0
+max_concurrent: null
