--- a/configs/slurm_configs/template.yaml
+++ b/configs/slurm_configs/template.yaml
@@ -2,7 +2,7 @@ partition: New
 time: null
 account: null
 constraint: null
-n_cpu_per_job: 2
-total_cpu: 96
+n_cpus_per_job: 2
+total_cpus: 96
 module: compilers/gcc-10.1.0
 max_concurrent: null
