--- a/configs/slurm_configs/template.yaml
+++ b/configs/slurm_configs/template.yaml
@@ -4,5 +4,6 @@ account: null
 constraint: null
 n_cpus_per_job: 2
 total_cpus: 96
+mem_per_cpu: 50
 module: compilers/gcc-10.1.0
 max_concurrent: null
