--- a/pyproject.toml
+++ b/pyproject.toml
@@ -57,8 +57,12 @@ doc = [
     "matplotlib"
 ]
 
-[tool.setuptools]
-packages = ["hdspin"]
+# [tool.setuptools]
+# packages = ["hdspin"]
+
+[tool.setuptools.packages.find]
+where = ["src"]  # list of folders that contain the packages (["."] by default)
+include = ["hdspin*"]  # package names should match these glob patterns (["*"] by default)
 
 [tool.black]
 line-length = 80
