--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,7 +33,7 @@ jobs:
       run: python -m pip install --upgrade wheel setuptools
 
     - name: Build and install
-      run: pip install --verbose .
+      run: pip install --verbose ".[test]"
 
     - name: Run tests
       run: |
