--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -33,11 +33,16 @@ jobs:
       run: python -m pip install --upgrade wheel setuptools
 
     - name: Check directory
-      run: |
-        ls
-        ls src
-        ls src/cpp
-        ls src/cpp/extern
+      run: ls
+
+    - name: Check directory
+      run: ls src
+
+    - name: Check directory
+      run: ls src/cpp
+
+    - name: Check directory
+      run: ls src/cpp/extern
 
     - name: Build and install
       run: pip install --verbose ".[test]"
