--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
-[submodule "inc/ArbitraryPrecision/ap"]
+[submodule "inc/ap"]
 	path = inc/ArbitraryPrecision/ap
 	url = https://github.com/arbitrary-precision/ap
