--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,9 @@
 [submodule "inc/ap"]
 	path = inc/ArbitraryPrecision/ap
 	url = https://github.com/arbitrary-precision/ap
+[submodule "inc/Catch2"]
+	path = inc/Catch2
+	url = https://github.com/catchorg/Catch2
+[submodule "inc/Catch2_v3/Catch2"]
+	path = inc/Catch2_v3/lib/Catch2
+	url = https://github.com/catchorg/Catch2
