Update state manipulation libraries and testing

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,5 +1,4 @@
-cmake_minimum_required(VERSION 3.6)
-project(hdspin)
 include_directories(../inc)
-add_subdirectory(state_manipulation)
 add_subdirectory(app)
+add_subdirectory(state_manipulation)
+add_subdirectory(Catch2_v3)
