--- a/lib/state_manipulation/CMakeLists.txt
+++ b/lib/state_manipulation/CMakeLists.txt
@@ -2,10 +2,16 @@ add_library(
     state_manipulation
     STATIC state_manipulation.cpp
 )
-target_compile_definitions(
-    state_manipulation
-    PUBLIC -DPRECISON=256
-)
+
+set(PRECISON $ENV{HDSPIN_PRECISON})
+
+if (${PRECISON} MATCHES "^[0-9]+$")
+    target_compile_definitions(
+        state_manipulation
+        PUBLIC -DPRECISON=${PRECISON}
+    )
+endif()
+
 set_target_properties(
     state_manipulation
     PROPERTIES CXX_STANDARD 17
