Update other files in accordance with previous changes

--- a/lib/state/CMakeLists.txt
+++ b/lib/state/CMakeLists.txt
@@ -1,18 +1,18 @@
 add_library(
-    state_manipulation
-    STATIC state_manipulation.cpp
+    state
+    STATIC state.cpp
 )
 
 set(PRECISON $ENV{HDSPIN_PRECISON})
 
 if (${PRECISON} MATCHES "^[0-9]+$")
     target_compile_definitions(
-        state_manipulation
+        state
         PUBLIC -DPRECISON=${PRECISON}
     )
 endif()
 
 set_target_properties(
-    state_manipulation
+    state
     PROPERTIES CXX_STANDARD 17
 )
