Update tests for energy mapping

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,6 +17,7 @@ if (${BUILD_TESTS})
     add_executable(
         tests
         tests/tests.cpp
+        src/energy_mapping.cpp
         src/utils.cpp
     )
 
