--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -41,3 +41,8 @@ jobs:
       - name: run tests
         run: |
           ./build/tests -d yes
+
+      - name: run executable with default config
+        run: |
+          cd build
+          mpiexec -n 2 hdspin
