--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -44,4 +44,5 @@ jobs:
 
       - name: run executable with default config
         run: |
+          cp build/config.json .
           mpiexec -n 2 ./build/hdspin
