Try to track down the floating point error

--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,7 +42,6 @@ jobs:
         run: |
           ./build/tests -d yes
 
-      # - name: run executable with default config
-      #   run: |
-      #     cp build/config.json .
-      #     mpiexec -n 2 ./build/hdspin
+      - name: run executable with default config
+        run: |
+          mpiexec -n 2 ./build/hdspin build/test_config_standard.json
