--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -42,6 +42,6 @@ jobs:
         run: |
           ./build/tests -d yes
 
-      - name: run executable with default config
-        run: |
-          mpiexec -n 2 ./build/hdspin tests/test_config_standard.json
+      # - name: run executable with default config
+      #   run: |
+      #     mpiexec -n 2 ./build/hdspin tests/test_config_standard.json
