--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -19,10 +19,10 @@ jobs:
         with:
           submodules: true
 
-      - name: install MPI
-        uses: mpi4py/setup-mpi@v1
-        with:
-          mpi: "openmpi"
+      # - name: install MPI
+      #   uses: mpi4py/setup-mpi@v1
+      #   with:
+      #     mpi: "openmpi"
 
       - name: build
         uses: threeal/cmake-action@latest
@@ -42,6 +42,6 @@ jobs:
         run: |
           ./build/tests -d yes
 
-      # - name: run executable with default config
-      #   run: |
-      #     mpiexec -n 2 ./build/hdspin tests/test_config_standard.json
+      - name: run executable with default config (no MPI)
+        run: |
+          ./build/hdspin tests/test_config_standard.json
