Overall 1-point observables

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -72,8 +72,7 @@ add_executable(
     src/utils.cpp
     src/spin.cpp
     src/simulation.cpp
-    src/obs_energy.cpp
-    src/obs_cache_size.cpp
+    src/obs1.cpp
 )
 
 target_compile_definitions(hdspin PUBLIC -DPRECISON=${PRECISON})
