--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -54,5 +54,6 @@ jobs:
       - name: run postprocess
         run: |
           pip install numpy
+          pip install scipy
           python3 postprocess.py
 
