--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "inc/Catch2_v3/Catch2"]
 	path = lib/Catch2_v3/lib/Catch2
 	url = https://github.com/catchorg/Catch2
+[submodule "inc/xtensor"]
+	path = inc/xtensor
+	url = https://github.com/xtensor-stack/xtensor
