--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "inc/Catch2"]
 	path = inc/Catch2
 	url = https://github.com/catchorg/Catch2
+[submodule "lib/Catch2_v3/Catch2"]
+	path = lib/Catch2_v3/lib/Catch2
+	url = https://github.com/catchorg/Catch2
