--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -1,4 +1,4 @@
-name: test
+name: ci
 
 on:
   pull_request:
@@ -13,7 +13,7 @@ jobs:
 
     strategy:
       matrix:
-        mpi: ['mpich', 'openmpi', 'intelmpi']
+        mpi: ['mpich', 'openmpi']
         os: ['ubuntu-latest', 'macos-latest']
 
     name: ${{ matrix.os }} ${{ matrix.mpi }}
