--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,4 +1,4 @@
-name: ci
+name: build
 
 on:
   pull_request:
@@ -38,7 +38,6 @@ jobs:
       - name: install python dependencies
         run: |
           pip install numpy
-          pip install scipy
 
       - name: build
         run: |
