--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -15,6 +15,7 @@ jobs:
       matrix:
         mpi: ['mpich', 'openmpi']
         os: ['ubuntu-latest', 'macos-latest']
+        precision: [128, 256, 4096, 16384]
 
     name: ${{ matrix.os }} ${{ matrix.mpi }}
     runs-on: ${{ matrix.os }}
@@ -30,19 +31,9 @@ jobs:
         with:
           mpi: ${{ matrix.mpi }}
 
-      - name: set up Python 3.9
-        uses: actions/setup-python@v2
-        with:
-          python-version: 3.9
-
-      - name: install python dependencies
-        run: |
-          pip install numpy
-          pip install scipy
-
       - name: build
         run: |
-          cmake -S . -B build -DPRECISON=256 -DBUILD_TESTS=ON -DSMOKE=OFF
+          cmake -S . -B build -DPRECISON=${{ matrix.precision }} -DBUILD_TESTS=ON -DSMOKE=OFF
           cd build
           make
           cd ..
@@ -53,11 +44,17 @@ jobs:
 
       - name: test executables
         run: |
-          mpiexec -n 2 ./build/hdspin -t 6 -N 128 -l EREM -b 2.4 -d gillespie --seed=123
-          rm -r data grids
-          mpiexec -n 2 ./build/hdspin -t 6 -N 128 -l EREM -b 2.2 -d standard --seed=123
-          rm -r data grids
-          mpiexec -n 2 ./build/hdspin -t 6 -N 128 -l EREM -b 2.3 --seed=123
+          mpiexec -n 5 ./build/hdspin -t 6 -N ${{ matrix.precision }} -l EREM -b 2.4 --seed=123
+
+      - name: set up Python 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: 3.9
+
+      - name: install python dependencies
+        run: |
+          pip install numpy
+          pip install scipy
 
       - name: run postprocess
         run: |
