--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -17,7 +17,7 @@ jobs:
         os: ['ubuntu-latest', 'macos-latest']
         precision: [128, 256, 4096, 16384]
 
-    name: ${{ matrix.os }} ${{ matrix.mpi }}
+    name: ${{ matrix.os }} ${{ matrix.mpi }} ${{ precision }}
     runs-on: ${{ matrix.os }}
 
     steps:
