--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -23,8 +23,8 @@ jobs:
     steps:
       - name: checkout
         uses: actions/checkout@v3
-        with:
-          submodules: true
+        # with:
+        #   submodules: true
 
       - name: install MPI
         uses: mpi4py/setup-mpi@v1
