Add json output for the energy as a test

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -62,6 +62,7 @@ add_executable(
     src/energy_mapping.cpp
     src/utils.cpp
     src/main_utils.cpp
+    src/processing_utils.cpp
     src/spin.cpp
     src/obs1.cpp
     src/obs2.cpp
